update guide Arbitrum Nitro

--- a/src/guides/main/arbitrum-nitro-arbitrum-university-560.yaml
+++ b/src/guides/main/arbitrum-nitro-arbitrum-university-560.yaml
@@ -1,12 +1,12 @@
 categories: []
 content: A deeper look into Arbitrum Nitro
-created: '2023-11-22T16:37:58.829Z'
+created: '2023-11-22T18:25:43.057Z'
 guideType: onboarding
 key: arbitrum-nitro-arbitrum-university-560
 name: 'Arbitrum Nitro '
 publishStatus: Live
 steps:
-  - content: >
+  - content: >-
       ## What is Arbitrum Nitro?
 
 
@@ -22,7 +22,7 @@ steps:
 
 
       <div align="center">
-        <img style="max-height:600px;margin-bottom:40px" src="https://d31h13bdjwgzxs.cloudfront.net/academy/arbitrum-university/Guide/arbitrum_nitro_arbitrum_university_560/1700670758106_nitro.png"/>
+        <img style="max-height:600px;margin-bottom:40px" src="https://d31h13bdjwgzxs.cloudfront.net/academy/arbitrum-university/Guide/arbitrum_nitro_arbitrum_university_560/1700677384029_nitro.png"/>
       </div>
 
 
@@ -49,7 +49,7 @@ steps:
 
 
       <div align="center">
-        <img style="max-height:600px;margin-bottom:40px" src="https://d31h13bdjwgzxs.cloudfront.net/academy/arbitrum-university/Guide/arbitrum_nitro_arbitrum_university_560/1700670832018_features.png"/>
+        <img style="max-height:600px;margin-bottom:40px" src="https://d31h13bdjwgzxs.cloudfront.net/academy/arbitrum-university/Guide/arbitrum_nitro_arbitrum_university_560/1700677415896_features.png"/>
       </div>
 
 
@@ -174,7 +174,7 @@ steps:
 
 
       <div align="center">
-        <img style="max-height:600px;margin-bottom:40px" src="https://d31h13bdjwgzxs.cloudfront.net/academy/arbitrum-university/Guide/arbitrum_nitro_arbitrum_university_560/1700670880645_working_of%20transactions.png"/>
+        <img style="max-height:600px;margin-bottom:40px" src="https://d31h13bdjwgzxs.cloudfront.net/academy/arbitrum-university/Guide/arbitrum_nitro_arbitrum_university_560/1700677469815_transaction_lifecycle.png"/>
       </div>
 
 
@@ -236,11 +236,6 @@ steps:
       security and verification processes.
 
 
-      <div align="center">
-        <img style="max-height:600px;margin-bottom:40px" src="https://d31h13bdjwgzxs.cloudfront.net/academy/arbitrum-university/Guide/arbitrum_nitro_arbitrum_university_560/1700670955083_layers_of%20nitro.png"/>
-      </div>
-
-
       ### Layers of Nitro Node
 
 
@@ -251,6 +246,11 @@ steps:
       layer called ArbOS providing Layer 2 features, and the top layer handling
       node operations, also derived from geth. This layered design forms the
       "geth sandwich," with geth as the bread and ArbOS as the filling.
+
+
+      <div align="center">
+        <img style="max-height:600px;margin-bottom:40px" src="https://d31h13bdjwgzxs.cloudfront.net/academy/arbitrum-university/Guide/arbitrum_nitro_arbitrum_university_560/1700677506703_layers.png"/>
+      </div>
 
 
       ### Dual Compilation Strategy
