--- a/src/guides/main/arbitrum-nova-arbitrum-university-144.yaml
+++ b/src/guides/main/arbitrum-nova-arbitrum-university-144.yaml
@@ -1,6 +1,6 @@
 categories: []
 content: 'Arbitrum Nova: Enhanced scalability with AnyTrust verification.'
-created: '2023-11-28T11:55:39.862Z'
+created: '2023-11-28T12:27:59.709Z'
 guideType: onboarding
 key: arbitrum-nova-arbitrum-university-144
 name: Arbitrum Nova
@@ -220,7 +220,7 @@ steps:
 
 
       <div align="center">
-        <img style="max-height:400px;margin-bottom:30px" src="https://d31h13bdjwgzxs.cloudfront.net/academy/arbitrum-university/Guide/arbitrum_nova_arbitrum_university_144/1699548934571_screenshot_2023-11-09%20at%209.54.11%20pm.png"/>
+        <img style="max-height:400px;margin-bottom:30px" src="https://d31h13bdjwgzxs.cloudfront.net/academy/arbitrum-university/Guide/arbitrum_nova_arbitrum_university_144/1701174452634_anytrust_working.png"/>
       </div>
 
 
