--- a/src/guides/main/arbitrum-orbit-arbitrum-university-525.yaml
+++ b/src/guides/main/arbitrum-orbit-arbitrum-university-525.yaml
@@ -1,6 +1,6 @@
 categories: []
 content: 'Exploring Arbitrum Orbit: The Next Frontier in Layer-2 Solutions'
-created: '2023-11-28T13:14:55.725Z'
+created: '2023-11-28T13:52:20.461Z'
 guideType: onboarding
 key: arbitrum-orbit-arbitrum-university-525
 name: Arbitrum Orbit
@@ -113,6 +113,11 @@ steps:
       additional chains created within your Orbit chain's ecosystem.
 
 
+      <div align="center">
+        <img style="max-height:400px;margin-bottom:30px" src="https://d31h13bdjwgzxs.cloudfront.net/academy/arbitrum-university/Guide/arbitrum_orbit_arbitrum_university_525/1701179466748_licensing.png"/>
+      </div>
+
+
       However, this license applies specifically to chains that settle to an
       Arbitrum-DAO-governed chain. If you wish to establish an independent Layer
       2 chain on Ethereum that does not settle to an Arbitrum-DAO chain, you
@@ -153,7 +158,7 @@ steps:
 
 
       <div align="center">
-        <img style="max-height:400px;margin-bottom:30px" src="https://d31h13bdjwgzxs.cloudfront.net/academy/arbitrum-university/Guide/arbitrum_orbit_arbitrum_university_525/1699614157534_screenshot_2023-11-10%20at%204.01.25%20pm.png"/>
+        <img style="max-height:400px;margin-bottom:30px" src="https://d31h13bdjwgzxs.cloudfront.net/academy/arbitrum-university/Guide/arbitrum_orbit_arbitrum_university_525/1701179515385_configuration.png"/>
       </div>
 
 
