--- a/src/guides/main/introduction-to-stylus-arbitrum-university-536.yaml
+++ b/src/guides/main/introduction-to-stylus-arbitrum-university-536.yaml
@@ -1,6 +1,6 @@
 categories: []
 content: Delving deeper into stylus blockchain
-created: '2023-11-28T15:50:50.106Z'
+created: '2023-11-28T16:17:27.870Z'
 guideType: onboarding
 key: introduction-to-stylus-arbitrum-university-536
 name: 'Introduction to Stylus '
@@ -55,6 +55,11 @@ steps:
       EVM with improved efficiency and a rich set of libraries from languages
       like Rust, C, and C++, elevating the standard for smart contract
       development without altering EVM's core functionality.
+
+
+      <div align="center">
+        <img style="max-height:400px;margin-bottom:30px" src="https://d31h13bdjwgzxs.cloudfront.net/academy/arbitrum-university/Guide/introduction_to_stylus_arbitrum_university_536/1701188225600_importance_stylus.png"/>
+      </div>
 
 
       **3. Cost-Effective Advanced Cryptography:** Stylus enables previously
