--- a/src/guides/main/arbitrum-bridge-arbitrum-university-959.yaml
+++ b/src/guides/main/arbitrum-bridge-arbitrum-university-959.yaml
@@ -1,6 +1,6 @@
 categories: []
 content: 'Arbitrum Bridge: Seamless L1 to L2 Asset Transfer'
-created: '2023-11-13T14:06:59.287Z'
+created: '2023-11-28T17:15:25.625Z'
 guideType: onboarding
 key: arbitrum-bridge-arbitrum-university-959
 name: 'Arbitrum Bridge '
@@ -24,6 +24,11 @@ steps:
       functionality and user experience.
 
 
+      <div align="center">
+        <img style="max-height:400px;margin-bottom:30px" src="https://d31h13bdjwgzxs.cloudfront.net/academy/arbitrum-university/Guide/arbitrum_bridge_arbitrum_university_959/1701191668148_arbitrum_bridge.png"/>
+      </div>
+
+
       ## How do Bridges Work?
 
       Bridges like the Arbitrum bridge work by transferring the computational
@@ -44,6 +49,11 @@ steps:
       reduces the amount of processing Ethereum has to do, which saves on
       transaction fees, known as gas fees, and allows for more transactions to
       be processed at once, thereby increasing scalability.
+
+
+      <div align="center">
+        <img style="max-height:400px;margin-bottom:30px" src="https://d31h13bdjwgzxs.cloudfront.net/academy/arbitrum-university/Guide/arbitrum_bridge_arbitrum_university_959/1701191705179_working_of%20bridge.png"/>
+      </div>
 
 
       ### Burning Assets 
