--- a/src/guides/main/arbitrum-governance-arbitrum-university-791.yaml
+++ b/src/guides/main/arbitrum-governance-arbitrum-university-791.yaml
@@ -1,6 +1,6 @@
 categories: []
 content: A deeper look into the Arbitrum Governance Sructure
-created: '2023-11-29T16:55:47.262Z'
+created: '2023-11-29T17:26:48.923Z'
 guideType: onboarding
 key: arbitrum-governance-arbitrum-university-791
 name: Arbitrum Governance
@@ -157,6 +157,11 @@ steps:
       Given the substantial impact these changes can have, the role of chain
       ownership is significant and must be considered with the utmost
       seriousness within Arbitrum's journey towards greater decentralization.
+
+
+      <div align="center">
+        <img style="max-height:600px;margin-bottom:40px" src="https://d31h13bdjwgzxs.cloudfront.net/academy/arbitrum-university/Guide/arbitrum_governance_arbitrum_university_791/1701278771993_balancing_powers.png"/>
+      </div>
 
 
       ## On-Chain Governance 
