--- a/src/guides/main/arbitrum-governance-arbitrum-university-791.yaml
+++ b/src/guides/main/arbitrum-governance-arbitrum-university-791.yaml
@@ -1,6 +1,6 @@
 categories: []
 content: A deeper look into the Arbitrum Governance Sructure
-created: '2023-11-29T17:35:29.392Z'
+created: '2023-11-29T17:36:07.487Z'
 guideType: onboarding
 key: arbitrum-governance-arbitrum-university-791
 name: Arbitrum Governance
@@ -220,7 +220,7 @@ steps:
     stepItems: []
     uuid: d7a04223-527f-4c9f-b8df-02956a1e0eba
   - content: >-
-      ## Features of Security Counsil
+      ## Features of Security Council
 
       The Security Council's dual capacity for immediate action in emergencies
       and methodical upgrades in non-critical situations ensures the network's
