--- a/src/guides/main/arbitrum-dao-arbitrum-university-613.yaml
+++ b/src/guides/main/arbitrum-dao-arbitrum-university-613.yaml
@@ -1,6 +1,6 @@
 categories: []
 content: Understanding the workings of the Arbitrum DAO
-created: '2023-11-17T16:14:55.959Z'
+created: '2023-11-29T18:33:54.864Z'
 guideType: onboarding
 key: arbitrum-dao-arbitrum-university-613
 name: Arbitrum DAO
@@ -17,6 +17,11 @@ steps:
       solution enhancing Ethereum's scalability. It is a pivotal structure that
       empowers decentralized decision-making and the stewardship of the Arbitrum
       network's future, reflecting the collective will of its participants.
+
+
+      <div align="center">
+        <img style="max-height:400px;margin-bottom:30px" src="https://d31h13bdjwgzxs.cloudfront.net/academy/arbitrum-university/Guide/arbitrum_dao_arbitrum_university_613/1701282781379_dao.png"/>
+      </div>
 
 
       The DAO's treasury, also managed through smart contracts, funds the
@@ -62,6 +67,11 @@ steps:
       and the allocation of the DAO's funds.
 
 
+      <div align="center">
+        <img style="max-height:400px;margin-bottom:30px" src="https://d31h13bdjwgzxs.cloudfront.net/academy/arbitrum-university/Guide/arbitrum_dao_arbitrum_university_613/1701282804872_arbs_token.png"/>
+      </div>
+
+
       Voting power in the Arbitrum DAO is proportional to the amount of $ARB
       tokens one holds or controls through delegation. This means that votes are
       weighted based on the number of tokens, with more tokens translating to a
@@ -98,8 +108,6 @@ steps:
 
       4. Holding $ARB gives you the ability to govern Arbitrum, while holding
       $ETH doesn't impact your ability to govern Ethereum's protocol.
-
-              
     name: Introduction to Arbitrum DAO
     stepItems: []
     uuid: 91988ce3-b4d4-4d35-84eb-eeade6b5d62b
