update guide Security Council

--- a/src/guides/main/security-council-arbitrum-university-100.yaml
+++ b/src/guides/main/security-council-arbitrum-university-100.yaml
@@ -1,6 +1,6 @@
 categories: []
 content: A setp to ensure network integrity!
-created: '2023-11-30T13:45:00.179Z'
+created: '2023-11-30T13:53:19.510Z'
 guideType: onboarding
 key: security-council-arbitrum-university-100
 name: Security Council
@@ -138,6 +138,11 @@ steps:
       possess the specialized technical expertise necessary for the role. 
 
 
+      <div align="center">
+        <img style="max-height:400px;margin-bottom:30px" src="https://d31h13bdjwgzxs.cloudfront.net/academy/arbitrum-university/Guide/security_council_arbitrum_university_100/1701352273980_election_process.png"/>
+      </div>
+
+
       For members of the Arbitrum DAO, participation in the Security Council
       elections is not just a right but a responsibility that underscores the
       commitment to risk management and the broader goal of progressive
@@ -165,6 +170,11 @@ steps:
       3. **Alignment with DAO Values:** Regular elections facilitate the
       selection of Council members who embody the values outlined in the DAO’s
       Constitution.
+
+
+      <div align="center">
+        <img style="max-height:400px;margin-bottom:30px" src="https://d31h13bdjwgzxs.cloudfront.net/academy/arbitrum-university/Guide/security_council_arbitrum_university_100/1701352310988_imp_of%20elections.png"/>
+      </div>
 
 
       4. **Accountability:** The election process provides a mechanism for the
