update guide Security Council

--- a/src/guides/main/security-council-arbitrum-university-100.yaml
+++ b/src/guides/main/security-council-arbitrum-university-100.yaml
@@ -1,6 +1,6 @@
 categories: []
 content: A setp to ensure network integrity!
-created: '2023-11-30T13:53:19.510Z'
+created: '2023-11-30T14:26:30.028Z'
 guideType: onboarding
 key: security-council-arbitrum-university-100
 name: Security Council
@@ -210,7 +210,7 @@ steps:
 
 
       <div align="center">
-        <img style="max-height:400px;margin-bottom:30px" src="https://d31h13bdjwgzxs.cloudfront.net/academy/arbitrum-university/Guide/security_council_arbitrum_university_100/1700069994657_screenshot_2023-11-15%20at%2010.38.36%20pm.png"/>
+        <img style="max-height:400px;margin-bottom:30px" src="https://d31h13bdjwgzxs.cloudfront.net/academy/arbitrum-university/Guide/security_council_arbitrum_university_100/1701354370071_working_of%20elections.png"/>
       </div>
 
 
