--- a/src/guides/main/voting-on-dao-proposals-arbitrum-university-711.yaml
+++ b/src/guides/main/voting-on-dao-proposals-arbitrum-university-711.yaml
@@ -1,6 +1,6 @@
 categories: []
 content: Understanding the importance of DAO Voting
-created: '2023-11-30T14:45:15.461Z'
+created: '2023-11-30T15:22:02.448Z'
 guideType: onboarding
 key: voting-on-dao-proposals-arbitrum-university-711
 name: Voting on DAO Proposals
@@ -40,6 +40,11 @@ steps:
       for diverse opinions to be heard and considered, ultimately leading to
       decisions that are in the best interest of the entire DAO and its
       underlying technologies.
+
+
+      <div align="center">
+        <img style="max-height:400px;margin-bottom:30px" src="https://d31h13bdjwgzxs.cloudfront.net/academy/arbitrum-university/Guide/voting_on_dao_proposals_arbitrum_university_711/1701357701152_imp_of%20voting.png"/>
+      </div>
 
 
       3. **Responsiveness**: Voting ensures that the DAO can respond swiftly to
